fix flex gap in form

--- a/src/styles/_todoForm.scss
+++ b/src/styles/_todoForm.scss
@@ -11,8 +11,7 @@ $radius: 0.8rem;
 
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    gap: 1.5em;
+    justify-content:space-between;
     align-items: center;
     flex-grow: 1;
     
